动态增加界面会有bug

--- a/JiaoBaoYun-hb/html/show/show-all.html
+++ b/JiaoBaoYun-hb/html/show/show-all.html
@@ -58,7 +58,7 @@
 					container: '#show-all',
 					down: {
 						style: 'circle',
-						offset: '50px',
+						offset: 0,
 						callback: pulldownRefresh
 					},
 					up: {
