--- a/JiaoBaoYun-hb/html/show/show-all.html
+++ b/JiaoBaoYun-hb/html/show/show-all.html
@@ -20,7 +20,8 @@
 				<div v-show="listData.length>0" class=" show-list">
 					<div v-for="cardData of listData" class="mui-table-view cityNews-container">
 						<li v-for="(item,index) of cardData" class="mui-table-view-cell news-container" v-on:tap="jumpToPage(item)">
-							<div class="img-container news-img" v-bind:style="{'background-image':'url('+getBackImg(item,index)+')','background-position':'center','background-size':'cover'}">
+							<div class="img-container news-img" v-bind:style="{'background-image':'url('+getBackImg(item,index)+')','background-position':'center','background-size':'cover','text-align':'center'}">
+								<img class="play-video" v-if="isVideo(item)" src="../../image/utils/playvideo.png"/>
 							</div>
 							<div class="news-words">
 								<p class="news-title single-line">{{item.MsgTitle}}</p>
