--- a/JiaoBaoYun-hb/html/show/show-attended.html
+++ b/JiaoBaoYun-hb/html/show/show-attended.html
@@ -24,7 +24,8 @@
 				<div v-else v-show="listData.length>0" class="show-list">
 					<div v-for="cardData of listData" class="mui-table-view cityNews-container">
 						<li v-for="(item,index) of cardData" class="mui-table-view-cell news-container" v-on:tap="jumpToPage(item)">
-							<div class="img-container news-img" v-bind:style="{'background-image':'url('+getBackImg(item,index)+')','background-position':'center','background-size':'cover'}">
+							<div class="img-container news-img" v-bind:style="{'background-image':'url('+getBackImg(item,index)+')','background-position':'center','background-size':'cover','text-align':'center'}">
+								<img class="play-video" v-if="isVideo(item)" src="../../image/utils/playvideo.png"/>
 							</div>
 							<div class="news-words">
 								<p class="news-title single-line">{{item.MsgTitle}}</p>
@@ -92,6 +93,30 @@
 								arguments.callee(item);
 							}, 500);
 						}
+					},
+					isVideo: function(cell) {
+						var isVideo = false;
+						if(cell.EncType) {
+							switch(cell.EncType) {
+								case 2: //视频
+									isVideo = true;
+									break;
+								case 5: //图文混合
+									var addrs = cell.EncAddr.split(".");
+									switch(addrs[addrs.length - 1]) {
+										case "mp4":
+										case "MP4":
+											isVideo = true;
+											break;
+										default:
+											break;
+									}
+									break;
+								default:
+									break;
+							}
+						}
+						return isVideo
 					}
 				}
 			})
@@ -152,10 +177,10 @@
 				showAtt.detailReady = plus.webview.currentWebview().detailReady;
 				showAtt.isAttended = plus.webview.currentWebview().isAttended;
 				console.log("showAtt.detailReady" + showAtt.detailReady);
-				show_list.getShowList(showCity, function(showCity, data) {
-					showAtt.addData(showCity.pageIndex, data);
-					showCity.pageIndex++;
-				})
+//				show_list.getShowList(showCity, function(showCity, data) {
+//					showAtt.addData(showCity.pageIndex, data);
+//					showCity.pageIndex++;
+//				})
 				setListener();
 			})
 
