微课打完收工

--- a/JiaoBaoYun-hb/html/micro-course/course-attended.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-attended.html
@@ -29,15 +29,15 @@
 					<p style="margin: auto 0;padding: 10px;">暂无关注的课程~~</p>
 				</div>
 				<!--数据列表-->
-				<ul v-show="listData.length>0" class="mui-table-view">
-					<li v-for="li of listData" class="mui-table-view-cell">
+				<ul v-else v-show="listData.length>0" class="mui-table-view">
+					<li v-for="li of listData" v-if="li.IsFocus" class="mui-table-view-cell" v-on:tap="jumpToPage(li)">
 						<div class="course-container">
 							<div class="img-container"><img class="course-img" v-bind:src='li.CoursePic' />
-								<span class="red-circle"></span></div>
+								<span class="red-circle" v-bind:class="{'display-none':li.IsUpdate==0}"></span></div>
 							<div class="course-detail">
 								<div class="courseName-button">
 									<p class="course-name single-line">{{li.CourseName}}</p>
-									<button id="btn-focused" type="button" class="input-btn" v-bind:class="[li.IsFocus?'btn-focused':'btn-unfocus']" v-on:tap="toggleFocus(li)">{{li.IsFocus?'已关注':'关注'}}</button>
+									<button id="btn-focused" type="button" class="input-btn" v-bind:class="[li.IsFocus?'btn-focused':'btn-unfocus']" v-on:tap.stop="toggleFocus(li)">{{li.IsFocus?'已关注':'关注'}}</button>
 								</div>
 								<p class="course-info double-line">{{li.SecName}}</p>
 							</div>
@@ -62,6 +62,8 @@
 							courseInfo.pageIndex = 1;
 							course_list.getData(courseInfo, function(data) {
 								addData(data);
+							}, function(err) {
+								mui.toast(err.RspTxt);
 							})
 						}
 					}
@@ -72,23 +74,25 @@
 						if(events.getUtid()) {
 							isFocused = Boolean.parse(course.IsFocus);
 						} else {
-							isFocused = parseInt(events.isExistInStorageArray(storageKeyName.FOCUSECOURSES, course.TabId)[1]) > 0;
+							isFocused = parseInt(events.isExistInStorageArray(storageKeyName.FOCUSECOURSES, course.TabId)[1]) >= 0;
+							courseAtt.isUpdate(course);
 						}
 						course.IsFocus = isFocused;
 						return course;
 					},
 					toggleFocus: function(course) {
 						if(!events.getUtid()) {
-							events.toggleStorageArray(storageKeyName.FOCUSECOURSES, courseInfo.TabId, courseInfo.IsFocus);
+							events.toggleStorageArray(storageKeyName.FOCUSECOURSES, course.TabId, course.IsFocus);
 							course.IsFocus = !course.IsFocus;
-							courseAtt.isFocused = parseInt(myStorage.getItem(storageKeyName.FOCUSECOURSES) && myStorage.getItem(storageKeyName.FOCUSECOURSES).length > 0);
+							courseAtt.isAttended = Number(myStorage.getItem(storageKeyName.FOCUSECOURSES) && myStorage.getItem(storageKeyName.FOCUSECOURSES).length > 0);
+							console.log("是否已关注课程："+courseAtt.isAttended)
 							return;
 						}
 						//所需参数
 						var comData = {
 							userId: personal.utid, //用户ID,登录用户
-							courseId: courseInfo.TabId, //课程ID
-							status: courseInfo.IsFocus ? 0 : 1 //关注状态，0 不关注，1 关注
+							courseId: course.TabId, //课程ID
+							status: course.IsFocus ? 0 : 1 //关注状态，0 不关注，1 关注
 						};
 						// 等待的对话框
 						var wd = null;
@@ -98,11 +102,30 @@
 							if(data.RspCode == 0) { //成功
 								course.IsFocus = !course.IsFocus;
 								courseAtt.isAttended = data.RspData.FocusCnt > 0;
-
 							} else {
 								mui.toast(data.RspTxt);
 							}
 						});
+					},
+					isUpdate: function(course) {
+						var courseTime = events.isExistInStorageMap(storageKeyName.COURSELASTTIME, course.TabId);
+						//console.log("获取的更新时间：" + JSON.stringify(courseTime));
+						if(courseTime) {
+							if(courseTime < Date.parse(course.UpdateTime)) {
+								course.IsUpdate = 1;
+							} else {
+								course.IsUpdate = 0;
+							}
+						} else {
+							course.IsUpdate = 1;
+						}
+					},
+					jumpToPage: function(course) {
+						course.IsUpdate = 0;
+						events.singleWebviewInPeriod(undefined, 'course_details.html', course);
+						if(!events.getUtid()) {
+							events.setValueInMap(storageKeyName.COURSELASTTIME, course.TabId, Date.now());
+						}
 					}
 				}
 			})
@@ -136,23 +159,37 @@
 			});
 
 			function pulldownRefresh() {
+				if(!courseAtt.isAttended){
+					mui("#course-att").pullRefresh().endPulldown();
+					return;
+				}
 				courseInfo.pageIndex = 1;
 				course_list.getData(courseInfo, function(data) {
 					addData(data);
 					mui("#course-att").pullRefresh().endPulldown();
+				}, function(err) {
+					mui("#course-att").pullRefresh().endPulldown();
+					mui.toast(err.RspTxt);
 				})
 			}
 
 			function pullupRefresh() {
+				if(!courseAtt.isAttended){
+					mui("#course-att").pullRefresh().endPullupToRefresh();
+					return;
+				}
 				course_list.getData(courseInfo, function(data) {
 					addData(data);
-					mui("#course-att").pullRefresh().endPullUpToRefresh();
+					mui("#course-att").pullRefresh().endPullupToRefresh();
+				}, function(err) {
+					mui("#course-att").pullRefresh().endPullupToRefresh();
+					mui.toast(err.RspTxt);
 				})
 			}
 
 			function addData(data) {
 				data.map(function(course, index, data) {
-					courseAtt.isFocus(course);
+					return courseAtt.isFocus(course);
 				});
 				if(courseInfo.pageIndex === 1) {
 					courseAtt.listData = [];
@@ -169,10 +206,20 @@
 			function setListener() {
 				window.addEventListener("courseAttended", function(e) {
 					console.log("传递的事件：", e.detail);
+					var oldValue=courseAtt.isAttended;
 					if(e.detail.data == null) {
 						courseAtt.isAttended = 0;
 					} else {
-						courseAtt.isAttended = parseInt(e.detail.data);
+						courseAtt.isAttended = Number(e.detail.data);
+					}
+					console.log("获取的值：", courseAtt.isAttended);
+					if(courseAtt.isAttended&&oldValue) {
+						courseInfo.pageIndex = 1;
+						course_list.getData(courseInfo, function(data) {
+							addData(data);
+						}, function(err) {
+							console.log("出现错误：", err);
+						})
 					}
 				})
 			}
