--- a/JiaoBaoYun-hb/html/show/show-all.html
+++ b/JiaoBaoYun-hb/html/show/show-all.html
@@ -21,7 +21,7 @@
 					<div v-for="cardData of listData" class="mui-table-view cityNews-container">
 						<li v-for="(item,index) of cardData" class="mui-table-view-cell news-container" v-on:tap="jumpToPage(item)">
 							<div class="img-container news-img" v-bind:style="{'background-image':'url('+getBackImg(item,index)+')','background-position':'center','background-size':'cover','text-align':'center'}">
-								<img class="play-video" v-if="isVideo(item)" src="../../image/utils/playvideo.png"/>
+								<img class="play-video" v-if="isVideo(item)" src="../../image/utils/playvideo.png" />
 							</div>
 							<div class="news-words">
 								<p class="news-title single-line">{{item.MsgTitle}}</p>
@@ -76,7 +76,7 @@
 					showAll.addData(showCity.pageIndex, data);
 					showCity.pageIndex++;
 					mui('#show-all').pullRefresh().endPulldown();
-				},function(err){
+				}, function(err) {
 					mui.toast(err.RspTxt);
 					mui('#show-all').pullRefresh().endPulldown();
 				})
@@ -89,7 +89,7 @@
 					showAll.addData(showCity.pageIndex, data);
 					showCity.pageIndex++;
 					mui('#show-all').pullRefresh().endPullupToRefresh();
-				},function(err){
+				}, function(err) {
 					mui.toast(err.RspTxt);
 					mui('#show-all').pullRefresh().endPullupToRefresh();
 				})
@@ -99,15 +99,26 @@
 					console.log('获取的关注数据：', data);
 					showAll.addData(showCity.pageIndex, data);
 					showCity.pageIndex++;
-				},function(err){
+				}, function(err) {
 					mui.toast(err.RspTxt);
 				})
 				setListener();
 			})
-			function setListener(){
-				window.addEventListener("detailReady",function(){
+
+			function setListener() {
+				window.addEventListener("detailReady", function() {
 					console.log("获取监听事件 detailReady");
-					showAll.detailReady=true;
+					showAll.detailReady = true;
+				});
+				window.addEventListener("infoChanged", function() {
+					showCity.pageIndex = 1;
+					show_list.getShowList(showCity, function(showCity, data) {
+						console.log('获取的关注数据：', data);
+						showAll.addData(showCity.pageIndex, data);
+						showCity.pageIndex++;
+					}, function(err) {
+						mui.toast(err.RspTxt);
+					})
 				})
 			}
 		</script>
