--- a/JiaoBaoYun-hb/html/show/show-attended.html
+++ b/JiaoBaoYun-hb/html/show/show-attended.html
@@ -25,7 +25,7 @@
 					<div v-for="cardData of listData" class="mui-table-view cityNews-container">
 						<li v-for="(item,index) of cardData" class="mui-table-view-cell news-container" v-on:tap="jumpToPage(item)">
 							<div class="img-container news-img" v-bind:style="{'background-image':'url('+getBackImg(item,index)+')','background-position':'center','background-size':'cover','text-align':'center'}">
-								<img class="play-video" v-if="isVideo(item)" src="../../image/utils/playvideo.png"/>
+								<img class="play-video" v-if="isVideo(item)" src="../../image/utils/playvideo.png" />
 							</div>
 							<div class="news-words">
 								<p class="news-title single-line">{{item.MsgTitle}}</p>
@@ -58,6 +58,8 @@
 								console.log('获取的关注数据：', data);
 								showAtt.addData(showCity.pageIndex, data);
 								showCity.pageIndex++;
+							}, function(err) {
+								console.log("错误", err);
 							})
 						} else {
 							mui('#show-att').pullRefresh().endPulldown();
@@ -161,7 +163,7 @@
 					showAtt.addData(showCity.pageIndex, data);
 					showCity.pageIndex++;
 					mui('#show-att').pullRefresh().endPulldown();
-				},function(err){
+				}, function(err) {
 					mui.toast(err.RspTxt);
 					mui('#show-att').pullRefresh().endPulldown();
 				})
@@ -174,7 +176,7 @@
 					showAtt.addData(showCity.pageIndex, data);
 					showCity.pageIndex++;
 					mui('#show-att').pullRefresh().endPullupToRefresh();
-				},function(err){
+				}, function(err) {
 					mui.toast(err.RspTxt);
 					mui('#show-att').pullRefresh().endPullupToRefresh();
 				})
@@ -190,7 +192,7 @@
 				window.addEventListener("detailReady", function() {
 					console.log("show-attended获取监听事件 detailReady");
 					showAtt.detailReady = true;
-				})
+				});
 				window.addEventListener("showAttended", function(e) {
 					if(e.detail.data == null) {
 						showAtt.isAttended = 0;
@@ -198,6 +200,29 @@
 						showAtt.isAttended = parseInt(e.detail.data);
 					}
 					console.log("获取的关注信息：", showAtt.isAttended)
+				});
+				window.addEventListener("infoChanged", function() {
+					showCity.pageIndex = 1;
+					show_list.getShowList(showCity, function(showCity, data) {
+						if(data.length > 0) {
+							if(showAtt.isAttended == 1) {
+								showCity.pageIndex = 1;
+								show_list.getShowList(showCity, function(showCity, data) {
+									console.log('获取的关注数据：', data);
+									showAtt.addData(showCity.pageIndex, data);
+									showCity.pageIndex++;
+								}, function(err) {
+									console.log("错误", err);
+								})
+							}
+							showAtt.isAttended = 1;
+						} else {
+							showAtt.isAttended = 0;
+						}
+
+					}, function(err) {
+						mui.toast(err.RspTxt);
+					})
 				})
 			}
 		</script>
