移动版改版

--- a/JiaoBaoYun-hb/html/show/show-home.html
+++ b/JiaoBaoYun-hb/html/show/show-home.html
@@ -59,14 +59,6 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
-			<h1 class="mui-title">关注</h1>
-			<div id="header-indicator" class="mui-slider-indicator">
-				<div class="mui-indicator mui-active"></div>
-				<div class="mui-indicator"></div>
-			</div>
-			<a id="publish-show" class="mui-pull-right" style="">发布</a>
-		</header>
 		<div class="mui-content">
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
@@ -105,17 +97,17 @@
 				},
 				extras: {}
 			}
-			var items = [attendedItem,allItem];
+			var items = [attendedItem, allItem];
 			mui.init();
 			mui.plusReady(function() {
 				events.preload("show-detail.html", 100);
 				getFocusedPerson(function(isShow) {
 					if(isShow) {
-						attendedItem.extras.isAttended=true;
+						attendedItem.extras.isAttended = true;
 					} else {
-						attendedItem.extras.isAttended=false;
+						attendedItem.extras.isAttended = false;
 					}
-					console.log("展现主界面加载的items",items);
+					console.log("展现主界面加载的items", items);
 					setWebGroup();
 					setTitle(11);
 				})
@@ -127,20 +119,12 @@
 					detailReady = true;
 				})
 				window.addEventListener('focus', function() {
-					
+
 					getFocusedPerson(function(isShow) {
-						console.log("show-home.html获取关注事件"+isShow)
-						events.fireToPageNone("show-attended.html","showAttended",isShow);
+						console.log("show-home.html获取关注事件" + isShow)
+						events.fireToPageNone("show-attended.html", "showAttended", isShow);
 						console.log("获取的加载网页：" + items.length, items);
 					})
-				})
-				document.getElementById('publish-show').addEventListener('tap', function(e) {
-					var item = e.target;
-					if(events.judgeLoginMode(item)) {
-						return;
-					}
-					item.disabled = true;
-					events.singleWebviewInPeriod(item, "../quan/pub-dynamic.html", "zx");
 				})
 			}
 
@@ -167,7 +151,7 @@
 			}
 
 			function setWebGroup() {
-				console.log("获取的iten:"+items.length,items)
+				console.log("获取的iten:" + items.length, items)
 				group = new webviewGroup("show-home.html", {
 					items: items,
 					onChange: function(obj) {
@@ -200,7 +184,7 @@
 				postDataPro_getFocusByUser({
 					userId: events.getUtid()
 				}, wd, function(data) {
-//					wd.close();
+					//					wd.close();
 					//console.log("获取关注的人列表" + JSON.stringify(data));
 					if(data.RspCode == 0 && data.RspData.Users.length > 0) {
 						callback(1);
@@ -214,31 +198,12 @@
 			 * @param {Object} type 0 只有全部 10 显示全部 11 显示关注
 			 */
 			function setTitle(type) {
-				var title = document.querySelector(".mui-title");
-				var indicator = document.querySelector("#header-indicator");
-				switch(type) {
-					case 0: //全部
-						title.innerText = "全部";
-						indicator.style.display = "none";
-						break;
-					case 10: //全部
-						title.innerText = "全部";
-						indicator.style.display = "block";
-						indicator.firstElementChild.className = "mui-indicator";
-						indicator.lastElementChild.className = "mui-indicator mui-active";
-						break;
-					case 11: //关注
-						title.innerText = "关注";
-						indicator.style.display = "block";
-						indicator.firstElementChild.className = "mui-indicator mui-active";
-						indicator.lastElementChild.className = "mui-indicator";
-						break;
-					case 12:
-						indicator.style.display = "block";
-						break;
-					default:
-						break;
-				}
+				console.log("展现保存的展现标题类型：" + type);
+				myStorage.setItem(storageKeyName.SHOWTYPE, type.toString());
+				mui.fire(plus.webview.currentWebview().parent(), "showTitle", {
+					flag: 0,
+					type: type
+				});
 			}
 		</script>
 	</body>
