--- a/JiaoBaoYun-hb/html/micro-course/course-home.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home.html
@@ -59,13 +59,6 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
-			<h1 class="mui-title">关注</h1>
-			<div id="header-indicator" class="mui-slider-indicator">
-				<div class="mui-indicator mui-active"></div>
-				<div class="mui-indicator"></div>
-			</div>
-		</header>
 		<div class="mui-content">
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
@@ -165,7 +158,7 @@
 						pageSize: 1 //每页记录数,传入0，获取总记录数
 					}, wd, function(data) {
 						wd.close();
-						console.log("course-home微课主界面：",data);
+						console.log("course-home微课主界面：", data);
 						if(data.RspCode == 0 && data.RspData.totalCount) {
 							callback(1);
 						} else {
@@ -186,31 +179,11 @@
 			 * @param {Object} type 0 只有全部 10 显示全部 11 显示关注
 			 */
 			function setTitle(type) {
-				var title = document.querySelector(".mui-title");
-				var indicator = document.querySelector("#header-indicator");
-				switch(type) {
-					case 0: //全部
-						title.innerText = "全部";
-						indicator.style.display = "none";
-						break;
-					case 10: //全部
-						title.innerText = "全部";
-						indicator.style.display = "block";
-						indicator.firstElementChild.className = "mui-indicator";
-						indicator.lastElementChild.className = "mui-indicator mui-active";
-						break;
-					case 11: //关注
-						title.innerText = "关注";
-						indicator.style.display = "block";
-						indicator.firstElementChild.className = "mui-indicator mui-active";
-						indicator.lastElementChild.className = "mui-indicator";
-						break;
-					case 12:
-						indicator.style.display = "block";
-						break;
-					default:
-						break;
-				}
+				myStorage.setItem(storageKeyName.COURSETYPE, type.toString());
+				mui.fire(plus.webview.currentWebview().parent(), "showTitle", {
+					flag: 1,
+					type: type
+				});
 			}
 		</script>
 	</body>
