0006312: 关于界面中的图标跟版本号太大建议修改

--- a/JiaoBaoYun-hb/html/mine/about.html
+++ b/JiaoBaoYun-hb/html/mine/about.html
@@ -38,11 +38,10 @@
 			<h1 class="mui-title">关于</h1>
 		</header>
 		<div class="mui-content mui-fullscreen" style="background-color: white;bottom: 0px;">
-			<div style="text-align: center;padding-top: 10px;"><img src="../../image/mine/jiaobaoyun.png" style="width:50%;height: 50%;"></img>
+			<div style="text-align: center;padding-top: 10px;"><img src="../../image/mine/jiaobaoyun.png" style="width:110px;height: auto;padding-top: 20px;"></img>
 			</div>
-			<h5 id="version" style="text-align: center;">微视学堂</h5>
+			<h5 id="version" style="text-align: center;font-size: 15px;">微视学堂</h5>
 			<br />
-
 			<ul id="list" class="mui-table-view ">
 				<li id="li0" class="mui-table-view-cell mui-media studentsdynamic">
 					<a class="mui-navigate-right">
